APDS-160 - fix for the misalignment of the search boxes in the select template batch screen

--- a/app/styles/formfields.scss
+++ b/app/styles/formfields.scss
@@ -203,3 +203,8 @@ input[type=checkbox], input[type=radio] {
 .top-modal .col-md-6.right-button {
 	padding-right: 0px
 }
+.popover-content [type=text].form-control{     height: 24px;
+    line-height: 12px;
+    min-height: 24px;
+    margin-bottom: 7px;
+}
